--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#page-top">More things </a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-                <li class="sidebar-nav-item"><a href="#about">Subject</a></li>
+                <li class="sidebar-nav-item"><a href="https://juansan2009.github.io/lawoftort/">Subject</a></li>
                 <li class="sidebar-nav-item"><a href="#services"></a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio"></a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
@@ -69,7 +69,7 @@
                 <div class="row gx-4 gx-lg-5">
                     <center>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <button id="demobutton">Subject</button>
+                        <button href="https://juansan2009.github.io/lawoftort/" id="demobutton">Subject</button>
                         <h4><strong>Get to do something</strong></h4>
                         </div>
                         <button id="sus"></button>
